--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,10 +28,24 @@ jobs:
         run: |
           rustup update ${{ matrix.toolchain }}
           rustup default ${{ matrix.toolchain }}
-          rustup component add rustfmt
+          rustup component add rustfmt clippy
+      - name: install cargo-binstall
+        uses: cargo-bins/cargo-binstall@main
+      - name: Install required cargo tools
+        run: cargo binstall -y cargo-audit
 
       - name: Check format
         run: cargo fmt --check
 
+      - name: Validate code
+        run: cargo check
+
       - name: Test code
         run: cargo test --verbose
+
+      - name: Run clippy
+        if: ${{ matrix.toolchain == 'stable' }}
+        run: cargo clippy
+
+      - name: Run audit
+        run: cargo audit
